# unamed-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  DartConfiguration.tcl  Doxyfile.in  Hush.sln  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci-devtool.yml  ci.yml
cmake/: default-presets.json  program-options.cmake  windows-presets.json
docs/: .gitignore
docs/source/: api-reference.rst  conf.py  index.rst
docs/source/getting-started/: index.rst
docs/source/getting-started/building/: building-windows.rst  index.rst
docs/source/getting-started/installation/: index.rst
res/: bruno_mars.glb  compile_mesh.ps1  grid.frag  grid.vert  input_structures.glsl  mesh.frag  mesh.vert
src/: CMakeLists.txt
src/cmake/: utils.cmake
src/devtool/: Cargo.toml
src/devtool/src/: args.rs  commands.rs  main.rs
src/devtool/src/commands/: build.rs  configure.rs  format.rs  new_file.rs  tidy.rs  utils.rs
src/devtool/templates/: .hpp  .rs
src/editor/: CMakeLists.txt  imgui.ini
src/editor/src/: DebugTooltip.cpp  DebugTooltip.hpp  DebugUI.hpp  EditorApp.cpp  ScenePanel.cpp  StatsPanel.cpp  StatsPanel.hpp  UI.cpp  UI.hpp
src/engine_core/: CMakeLists.txt
src/engine_core/app_loader/: CMakeLists.txt
src/engine_core/app_loader/src/: ApplicationLoader.cpp  ApplicationLoader.hpp  IApplication.cpp  IApplication.hpp
src/engine_core/base/src/: Common.hpp  Dummy.cpp
src/engine_core/cmake/: deps.cmake  utils.cmake
src/engine_core/core/: CMakeLists.txt
src/engine_core/core/src/: Entity.cpp  Entity.hpp  ISystem.cpp  ISystem.hpp  Query.cpp  Query.hpp  Scene.cpp  Scene.hpp
src/engine_core/core/src/traits/: EntityTraits.cpp  EntityTraits.hpp
src/engine_core/core/tests/: Entity.test.cpp  Query.test.cpp
src/engine_core/filesystem/: CMakeLists.txt  HushFilesystemTest_include-b12d07c.cmake  HushFilesystemTest_tests-b12d07c.cmake
src/engine_core/filesystem/src/: FileSystem.hpp  IFile.hpp  VirtualFilesystem.cpp  VirtualFilesystem.hpp
src/engine_core/filesystem/src/filesystem/CFileSystem/: CFile.cpp  CFile.hpp  CFileSystem.cpp  CFileSystem.hpp
src/engine_core/filesystem/tests/filesystem/: helper.hpp
src/engine_core/filesystem/tests/filesystem/CFileSystem/: CFile.test.cpp  CFileSystem.test.cpp
src/engine_core/input/: CMakeLists.txt
src/engine_core/input/src/: InputManager.cpp  InputManager.hpp
src/engine_core/input/src/definitions/: MouseData.hpp
src/engine_core/log/: CMakeLists.txt
src/engine_core/rendering/: CMakeLists.txt
src/engine_core/rendering/src/: Renderer.hpp  WindowRenderer.cpp
src/engine_core/rendering/src/ImGui/: VulkanImGuiForwarder.cpp
src/engine_core/rendering/src/Shared/: Camera.cpp  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  GltfLoadFunctions.cpp  GltfLoadFunctions.hpp  IRenderable.hpp  ImageTexture.cpp  ImageTexture.hpp  MaterialOptions.hpp  MaterialPass.hpp  RenderableNode.hpp  ShaderBindings.hpp  ShaderMaterial.cpp  ShaderMaterial.hpp  TextureAllocator.hpp
src/engine_core/rendering/src/Vulkan/: DrawContext.hpp  FrameData.hpp  GPUMeshBuffers.hpp  GPUSceneData.hpp  GltfMetallicRoughness.cpp  GltfMetallicRoughness.hpp  VkDescriptors.cpp  VkDescriptors.hpp  VkMaterialInstance.hpp  VkRenderObject.hpp  VkTypes.hpp  VkUtilsFactory.hpp  VulkanAllocatedBuffer.cpp  VulkanAllocatedBuffer.hpp  VulkanFullScreenPass.cpp  VulkanFullScreenPass.hpp  VulkanLoader.cpp  VulkanLoader.hpp  VulkanMeshNode.cpp  VulkanMeshNode.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
src/engine_core/resources/: CMakeLists.txt
src/engine_core/resources/src/: FileSystem.hpp  IFile.cpp  IFile.hpp  ResourceManager.cpp  ResourceManager.hpp  VirtualFilesystem.cpp  VirtualFilesystem.hpp
src/engine_core/resources/src/filesystem/: CFileSystem.cpp  CFileSystem.hpp
src/engine_core/resources/src/filesystem/CFileSystem/: CFile.cpp  CFile.hpp
src/engine_core/scripting/: CMakeLists.txt
src/engine_core/scripting/src/: DotnetHost.cpp
src/engine_core/src/: HushEngine.cpp  HushEngine.hpp  dummy.cpp  main.cpp
src/engine_core/threading/: CMakeLists.txt
src/engine_core/threading/src/: Executor.cpp  Executor.hpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp
src/engine_core/threading/src/async/: Executor.hpp  SyncWait.cpp  SyncWait.hpp  Task.hpp  TaskTraits.hpp
src/engine_core/threading/tests/: ThreadPool.test.cpp
src/engine_core/threading/tests/async/: Task.test.cpp
src/engine_core/utils/: CMakeLists.txt
src/engine_core/utils/src/: Assertions.hpp  BitwiseUtils.hpp  EnumFlags.hpp  Error.hpp  MathUtils.hpp  Result.hpp  SharedLibrary.cpp  Vector3Math.hpp
src/engine_core/utils/src/networking/: NetworkUtils.hpp
