[package]
name = "devtool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
lazy_static = "1.5.0"
minijinja = "2.3.1"
regex = "1.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "hush"
path = "src/main.rs"